--- a/environment.yml
+++ b/environment.yml
@@ -64,6 +64,7 @@ dependencies:
   - ipython_genutils=0.2.0=py_1
   - jedi=0.18.2=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=pyhd8ed1ab_0
   - json5=0.9.5=pyh9f0ad1d_0
   - jsonschema=4.17.3=pyhd8ed1ab_0
   - jupyter_client=8.0.3=pyhd8ed1ab_0
@@ -150,6 +151,7 @@ dependencies:
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - platformdirs=3.0.0=pyhd8ed1ab_0
   - pluggy=1.0.0=pyhd8ed1ab_5
+  - pooch=1.7.0=pyhd8ed1ab_0
   - prometheus_client=0.16.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.38=pyha770c72_0
   - prompt_toolkit=3.0.38=hd8ed1ab_0
@@ -183,6 +185,8 @@ dependencies:
   - ruamel.yaml=0.17.21=py311h2582759_3
   - ruamel.yaml.clib=0.2.7=py311h2582759_1
   - s2n=1.3.37=h3358134_0
+  - scikit-learn=1.2.2=py311h67c5ca5_0
+  - scipy=1.10.1=py311h8e6699e_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=67.4.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
@@ -192,6 +196,7 @@ dependencies:
   - sqlalchemy=2.0.5.post1=py311h2582759_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - terminado=0.17.1=pyh41d4057_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=h27826a3_0
   - tomli=2.0.1=pyhd8ed1ab_0
