--- a/Dockerfile-postgres
+++ b/Dockerfile-postgres
@@ -1,3 +1,3 @@
 FROM postgres:latest
-ARG SQL_FILE='create-db.sql'
+ARG SQL_FILE='*.sql'
 COPY ./res/${SQL_FILE} /docker-entrypoint-initdb.d/${SQL_FILE}
