--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       context: ./
     command: >
       jupyter lab 
+        --allow-root
+        --ServerApp.allow_origin='*'
         --port=8889 
         --ip=0.0.0.0 
         --no-browser 
