--- a/environment.yml
+++ b/environment.yml
@@ -6,11 +6,13 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - aiofiles=22.1.0=pyhd8ed1ab_0
   - aiosqlite=0.18.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.8=h166bdaf_0
   - anyio=3.6.2=pyhd8ed1ab_0
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py311hd4cff14_3
   - arrow-cpp=11.0.0=ha770c72_5_cpu
   - asttokens=2.2.1=pyhd8ed1ab_0
+  - attr=2.5.1=h166bdaf_1
   - attrs=22.2.0=pyh71513ae_0
   - aws-c-auth=0.6.24=h84a1944_5
   - aws-c-cal=0.5.20=hc60faf5_6
@@ -31,10 +33,13 @@ dependencies:
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - beautifulsoup4=4.11.2=pyha770c72_0
   - bleach=6.0.0=pyhd8ed1ab_0
+  - brotli=1.0.9=h166bdaf_8
+  - brotli-bin=1.0.9=h166bdaf_8
   - brotlipy=0.7.0=py311hd4cff14_1005
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2022.12.7=ha878542_0
+  - cairo=1.16.0=ha61ee94_1014
   - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py311h409f033_3
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
@@ -43,17 +48,39 @@ dependencies:
   - conda=23.1.0=py311h38be061_0
   - conda-package-handling=2.0.2=pyh38be061_0
   - conda-package-streaming=0.7.0=pyhd8ed1ab_1
+  - contourpy=1.0.7=py311ha3edf6b_0
   - cryptography=39.0.1=py311h9b4c7bb_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
   - debugpy=1.6.6=py311hcafe171_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - entrypoints=0.4=pyhd8ed1ab_0
   - executing=1.2.0=pyhd8ed1ab_0
+  - expat=2.5.0=h27087fc_0
+  - fftw=3.3.10=nompi_hf0379b8_106
   - flit-core=3.8.0=pyhd8ed1ab_0
   - fmt=9.1.0=h924138e_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.39.2=py311h2582759_0
+  - freetype=2.12.1=hca18f0e_1
+  - gettext=0.21.1=h27087fc_0
   - gflags=2.2.2=he1b5a44_1004
+  - glib=2.74.1=h6239696_1
+  - glib-tools=2.74.1=h6239696_1
   - glog=0.6.0=h6f12383_0
+  - graphite2=1.3.13=h58526e2_1001
   - greenlet=2.0.2=py311hcafe171_0
+  - gst-plugins-base=1.22.0=h4243ec0_2
+  - gstreamer=1.22.0=h25f0c4b_2
+  - gstreamer-orc=0.4.33=h166bdaf_0
+  - harfbuzz=6.0.0=h8e241bc_0
   - icu=70.1=h27087fc_0
   - idna=3.4=pyhd8ed1ab_0
   - importlib-metadata=6.0.0=pyha770c72_0
@@ -62,6 +89,7 @@ dependencies:
   - ipykernel=6.21.2=pyh210e3f2_0
   - ipython=8.11.0=pyh41d4057_0
   - ipython_genutils=0.2.0=py_1
+  - jack=1.9.22=h11f4161_0
   - jedi=0.18.2=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.2.0=pyhd8ed1ab_0
@@ -79,8 +107,12 @@ dependencies:
   - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
   - jupyterlab_server=2.19.0=pyhd8ed1ab_0
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py311h4dd048b_1
   - krb5=1.20.1=h81ceb04_0
+  - lame=3.100=h166bdaf_1003
+  - lcms2=2.15=haa2dc70_1
   - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
   - libabseil=20220623.0=cxx17_h05df665_6
   - libarchive=3.6.2=h3d51595_0
   - libarrow=11.0.0=h2ebd325_5_cpu
@@ -88,44 +120,74 @@ dependencies:
   - libbrotlicommon=1.0.9=h166bdaf_8
   - libbrotlidec=1.0.9=h166bdaf_8
   - libbrotlienc=1.0.9=h166bdaf_8
+  - libcap=2.66=ha37c62d_0
   - libcblas=3.9.0=16_linux64_openblas
+  - libclang=15.0.7=default_had23c3d_1
+  - libclang13=15.0.7=default_h3e3d535_1
   - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcups=2.3.3=h36d4200_3
   - libcurl=7.88.1=hdc1c0ab_0
+  - libdb=6.2.32=h9c3ff4c_0
+  - libdeflate=1.17=h0b41bf4_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libevent=2.1.10=h28343ad_4
   - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.2=h27087fc_0
   - libgcc-ng=12.2.0=h65d4601_19
+  - libgcrypt=1.10.1=h166bdaf_0
   - libgfortran-ng=12.2.0=h69a702a_19
   - libgfortran5=12.2.0=h337968e_19
+  - libglib=2.74.1=h606061b_1
   - libgomp=12.2.0=h65d4601_19
   - libgoogle-cloud=2.7.0=h21dfe5b_1
+  - libgpg-error=1.46=h620e276_0
   - libgrpc=1.51.1=h4fad500_1
   - libiconv=1.17=h166bdaf_0
+  - libjpeg-turbo=2.1.5.1=h0b41bf4_0
   - liblapack=3.9.0=16_linux64_openblas
+  - libllvm15=15.0.7=hadd5161_1
   - libmamba=1.1.0=hde2b089_3
   - libmambapy=1.1.0=py311h1f88262_3
   - libnghttp2=1.52.0=h61bc06f_0
   - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.39=h753d276_0
   - libpq=15.2=hb675445_0
   - libprotobuf=3.21.12=h3eb15da_0
+  - libsndfile=1.2.0=hb75c966_0
   - libsodium=1.0.18=h36c2ea0_1
   - libsolv=0.7.23=h3eb15da_0
   - libsqlite=3.40.0=h753d276_0
   - libssh2=1.10.0=hf14f497_3
   - libstdcxx-ng=12.2.0=h46fd767_19
+  - libsystemd0=252=h2a991cd_0
   - libthrift=0.18.0=h5e4af38_0
+  - libtiff=4.5.0=hddfeb54_5
+  - libtool=2.4.7=h27087fc_0
+  - libudev1=253=h0b41bf4_0
   - libutf8proc=2.8.0=h166bdaf_0
   - libuuid=2.32.1=h7f98852_1000
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.3.0=h0b41bf4_0
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.5.0=h79f4944_1
   - libxml2=2.10.3=h7463322_0
   - libzlib=1.2.13=h166bdaf_4
   - lz4-c=1.9.4=hcb278e6_0
   - lzo=2.10=h516909a_1000
   - mamba=1.1.0=py311h3072747_3
   - markupsafe=2.1.2=py311h2582759_0
+  - matplotlib=3.7.1=py311h38be061_0
+  - matplotlib-base=3.7.1=py311h8597a09_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - mistune=2.0.5=pyhd8ed1ab_0
+  - mpg123=1.31.2=hcb278e6_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.32=ha901b37_0
+  - mysql-libs=8.0.32=hd7da12d_0
   - nbclassic=0.5.2=pyhd8ed1ab_0
   - nbclient=0.7.2=pyhd8ed1ab_0
   - nbconvert=7.2.9=pyhd8ed1ab_0
@@ -136,8 +198,11 @@ dependencies:
   - nest-asyncio=1.5.6=pyhd8ed1ab_0
   - notebook=6.5.2=pyha770c72_1
   - notebook-shim=0.2.2=pyhd8ed1ab_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.89=he45b914_0
   - numpy=1.24.2=py311h8e6699e_0
-  - openssl=3.0.8=h0b41bf4_0
+  - openjpeg=2.5.0=hfec8fc6_2
+  - openssl=3.1.0=h0b41bf4_0
   - orc=1.8.2=hfdbbad2_2
   - packaging=23.0=pyhd8ed1ab_0
   - pandas=1.5.3=py311h2872171_0
@@ -145,19 +210,25 @@ dependencies:
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parquet-cpp=1.5.1=2
   - parso=0.8.3=pyhd8ed1ab_0
+  - pcre2=10.40=hc3806b6_0
   - pexpect=4.8.0=pyh1a96a4e_2
   - pickleshare=0.7.5=py_1003
+  - pillow=9.4.0=py311h573f0d3_2
   - pip=23.0.1=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - platformdirs=3.0.0=pyhd8ed1ab_0
   - pluggy=1.0.0=pyhd8ed1ab_5
+  - ply=3.11=py_1
   - pooch=1.7.0=pyhd8ed1ab_0
   - prometheus_client=0.16.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.38=pyha770c72_0
   - prompt_toolkit=3.0.38=hd8ed1ab_0
   - psutil=5.9.4=py311hd4cff14_0
   - psycopg2=2.9.3=py311h968e94b_2
+  - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulseaudio=16.1=ha8d29e2_1
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pyarrow=11.0.0=py311hbdf6286_5_cpu
   - pybind11-abi=4=hd8ed1ab_3
@@ -165,6 +236,9 @@ dependencies:
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.14.0=pyhd8ed1ab_0
   - pyopenssl=23.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyqt=5.15.7=py311ha74522f_3
+  - pyqt5-sip=12.11.0=py311hcafe171_3
   - pyrsistent=0.19.3=py311h2582759_0
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.11.0=he550d4f_1_cpython
@@ -175,6 +249,7 @@ dependencies:
   - pytz=2022.7.1=pyhd8ed1ab_0
   - pyyaml=6.0=py311hd4cff14_5
   - pyzmq=25.0.0=py311hd6ccaeb_0
+  - qt-main=5.15.8=h67dfc38_7
   - re2=2023.02.01=hcb278e6_0
   - readline=8.1.2=h0f457ee_0
   - reproc=14.2.4=h0b41bf4_0
@@ -189,6 +264,7 @@ dependencies:
   - scipy=1.10.1=py311h8e6699e_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=67.4.0=pyhd8ed1ab_0
+  - sip=6.7.7=py311hcafe171_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.9=hbd366e4_2
   - sniffio=1.3.0=pyhd8ed1ab_0
@@ -199,6 +275,7 @@ dependencies:
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=h27826a3_0
+  - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - toolz=0.12.0=pyhd8ed1ab_0
   - tornado=6.2=py311hd4cff14_1
@@ -212,6 +289,24 @@ dependencies:
   - webencodings=0.5.1=py_1
   - websocket-client=1.5.1=pyhd8ed1ab_0
   - wheel=0.38.4=pyhd8ed1ab_0
+  - xcb-util=0.4.0=h166bdaf_0
+  - xcb-util-image=0.4.0=h166bdaf_0
+  - xcb-util-keysyms=0.4.0=h166bdaf_0
+  - xcb-util-renderutil=0.3.9=h166bdaf_0
+  - xcb-util-wm=0.4.1=h166bdaf_0
+  - xkeyboard-config=2.38=h0b41bf4_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.8.4=h0b41bf4_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
   - y-py=0.5.9=py311hfe55011_0
   - yaml=0.2.5=h7f98852_2
