--- a/environment.yml
+++ b/environment.yml
@@ -43,6 +43,7 @@ dependencies:
   - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py311h409f033_3
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  - click=8.1.3=unix_pyhd8ed1ab_2
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.1.2=pyhd8ed1ab_0
   - conda=23.1.0=py311h38be061_0
@@ -88,6 +89,7 @@ dependencies:
   - importlib_resources=5.12.0=pyhd8ed1ab_0
   - ipykernel=6.21.2=pyh210e3f2_0
   - ipython=8.11.0=pyh41d4057_0
+  - ipython-sql=0.3.9=pyhd8ed1ab_1004
   - ipython_genutils=0.2.0=py_1
   - jack=1.9.22=h11f4161_0
   - jedi=0.18.2=pyhd8ed1ab_0
@@ -221,6 +223,7 @@ dependencies:
   - pluggy=1.0.0=pyhd8ed1ab_5
   - ply=3.11=py_1
   - pooch=1.7.0=pyhd8ed1ab_0
+  - prettytable=3.6.0=pyhd8ed1ab_0
   - prometheus_client=0.16.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.38=pyha770c72_0
   - prompt_toolkit=3.0.38=hd8ed1ab_0
@@ -243,6 +246,7 @@ dependencies:
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.11.0=he550d4f_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-dotenv=1.0.0=pyhd8ed1ab_0
   - python-fastjsonschema=2.16.3=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python_abi=3.11=3_cp311
@@ -270,6 +274,7 @@ dependencies:
   - sniffio=1.3.0=pyhd8ed1ab_0
   - soupsieve=2.3.2.post1=pyhd8ed1ab_0
   - sqlalchemy=2.0.5.post1=py311h2582759_0
+  - sqlparse=0.4.3=pyhd8ed1ab_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - terminado=0.17.1=pyh41d4057_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
