--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cs6140-final-project/generate-sql"
+name = "cs6141-final-project"
 version = "0.1.0"
 description = "To infinity, and beyond!"
 authors = [
@@ -8,7 +8,7 @@ authors = [
     "Bram Ziltzer <ziltzer.b@northeastern.edu>",
 ]
 readme = "README.md"
-packages = [{include = "generate-sql", from = "src"}]
+packages = [{include = "final_project", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "~3.10"
@@ -18,6 +18,10 @@ psycopg2-binary = "^2.9.5"
 python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.7"
 pyyaml = "^6.0"
+jupyterlab = "^3.6.3"
+numpy = "^1.24.3"
+scikit-learn = "^1.2.2"
+
 
 [tool.black]
 line-length = 79
