--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ matplotlib = "^3.7.1"
 tabulate = "^0.9.0"
 seaborn = "^0.12.2"
 numpy = "^1.24.3"
-torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl"}
+torch = "^2.0.0"
+# torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl"}
 # torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-win_amd64.whl"}
 
 
