--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cs6141-final-project"
-version = "0.1.0"
+version = "0.1.4"
 description = "To infinity, and beyond!"
 authors = [
     "Daniel Blum <blum.da@northeastern.edu>",
@@ -9,6 +9,9 @@ authors = [
 ]
 readme = "README.md"
 packages = [{include = "final_project", from = "src"}]
+
+[tool.poetry.scripts]
+final-project = 'final_project.base.main:run'
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -25,6 +28,7 @@ numpy = "^1.24.3"
 torch = "^2.0.0"
 # torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl"}
 # torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-win_amd64.whl"}
+docopt = "^0.6.2"
 
 
 [tool.black]
